--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'org.springframework.boot' version '2.4.0-M3'
-	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+	id "io.spring.dependency-management" version "1.0.11.RELEASE"
 	id 'java'
 	id 'idea'
 	id 'eclipse'
@@ -13,6 +13,9 @@ sourceCompatibility = '11'
 repositories {
 	mavenCentral()
 	maven { url 'https://repo.spring.io/milestone' }
+//	maven {
+//		url "https://plugins.gradle.org/m2/"
+//	}
 }
 
 dependencies {
