Setting the context path of application and also fixing index page to work with relative links after setting context path

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -1,3 +1,4 @@
+server.servlet.context-path=/fraud-checker
 server.port=9001
 #spring.devtools.restart.exclude = static/**,templates/**,custom/**
 # valid values are: always, never, on_param
