--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -1,3 +1,4 @@
+server.servlet.context-path=/fraud-checker
 server.port=8001
 # valid values are: always, never, on_param
 server.error.include-stacktrace=always
