--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,3 +1,4 @@
+server.servlet.context-path=/fraud-checker
 server.port=10001
 # valid values are: always, never, on_param
 server.error.include-stacktrace=never
